# Agenda

./: .gitignore  README.md
src/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2024-10-31-192147_create_todos/: up.sql
src-tauri/src/: db.rs  lib.rs  main.rs  schema.rs
src-tauri/src/models/: models.rs
src/src/: App.vue  main.ts  style.scss  theme.ts
src/src/components/: WindowFrame.vue
src/src/models/: Todo.ts
